# IPAtype

./: .gitignore  IPAtype.psproj  MANIFEST.in  README.md  installer.cfg  setup.cfg  setup.py
IPAtype/: __init__.py
IPAtype/resources/: settings.json
ipapad/: IPAtype.pyw.bak  __init__.py  __main__.py  dialogs.py  document_handler.py  main_window.py  settings.py  shared.py  widgets.py  writer_widget.py
ipapad/resources/: settings.json
