[metadata]
name = ipapad
version = 0.1
description = "A tool for writing in the International Phonetic Alphabet"
license = "GNU General Public License, Version 3"
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Win32 (MS Windows)
  Environment :: X11 Applications
  Environment :: X11 Applications :: Qt
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering
  Topic :: Text Processing
  Topic :: Text Processing :: Linguistic
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
#scripts =
#  bin/ipapad
#  bin/ipapad.bat
install_requires =
  PySide6
  Shiboken6

[options.entry_points]
gui_scripts =
  ipapad = ipapad:__main__.main
console_scripts =
  ipapad-cli = ipapad:__main__.main
